Closed
Bug 424945
Opened 17 years ago
Closed 17 years ago
Use selected weight for font cache
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: pavlov, Assigned: pavlov)
References
Details
(Keywords: perf)
Attachments
(1 file)
1.56 KB,
patch
|
vlad
:
review+
|
Details | Diff | Splinter Review |
Because the FontEntry always knows the actual weight we're going to use we can use it for doing cache lookups instead of say, 401 or 402 which don't really map to anything. This will reduce GDI object usage a lot in cases where you have lots of fonts on a page and bolder/lighter (or simply have font weight misses like 600 and 700 when you only have a 700). Also, if there is no size adjust, pre-round size so we can add some additional reuse.
Attachment #311529 -
Flags: review?(vladimir)
Comment on attachment 311529 [details] [diff] [review]
fix
Looks fine here.
Attachment #311529 -
Flags: review?(vladimir) → review+
Updated•17 years ago
|
Version: unspecified → Trunk
Comment 2•17 years ago
|
||
We should probably put together a Mac version of this, I'll work on setting up a patch.
Assignee | ||
Updated•17 years ago
|
Flags: blocking1.9+
Assignee | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment 3•17 years ago
|
||
Did this regress Thai somehow? See the "what's happen with thai language after FF3.0b5 nightly build 27032008??" thread in m.d.a.firefox.
Comment 4•17 years ago
|
||
Discussion in d-a-f indicates that this bug may have regressed Thai display from
http://www.firefoxthai.com/forum/image/images/4266sss.jpg
to
http://www.firefoxthai.com/forum/image/images/7767ttt.jpg
Assignee | ||
Comment 5•17 years ago
|
||
I don't see how, but feel free to file a new bug and I'll investigate.
You need to log in
before you can comment on or make changes to this bug.
Description
•