bug 424945. reduce GDI object use by using the selected font weight and rounded font size (when no size adjust) for doing cache lookups.  r=vlad